--- a/app-azure/Views/Home/Index.cshtml
+++ b/app-azure/Views/Home/Index.cshtml
@@ -4,5 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome  Sathishkumar S pushing the code from local to update directly into web app via git hub</h1>
+    <h3 style="background-color:aquamarine">
+        @ViewBag.Repository
+    </h3>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
